<resources>
    <string name="app_name">Mighty</string>
    <string name="login_title">Welcome!</string>
    <string name="login_subtitle">Mighty is a gamified wellness app. Users get points for working out, meditating, eating, sleeping.</string>
    <string name="title_greeting">Mighty</string>
    <string name="title_button_get_started">Get Started</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Log In</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_exercises">Exercises</string>
    <string name="tab_start_workout">Start Workout</string>
    <string name="tab_history">History</string>
    <string name="top_bar_mighty">Mighty</string>
    <string name="fas_rocket">Rocket</string>
    <string name="tab_settings">Settings</string>
    <string name="top_bar_mighty">Mighty</string>
</resources>